--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<!-- <html>
 <head>
     <meta charset="utf-8">
     <title>OpenID Connect Spring Client Demo</title>
@@ -20,4 +20,4 @@ Go to secured <a href="/home">Homepage</a>
 Go to secured <a href="/home2">Homepage</a>
 </p>
 </body>
-</html>
+</html> -->
